--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</div>
 
 		<div class="thumbnail">
-			<img src= "images/java.jpg" alt="laptop image" class="java-image">
+			<img src= "java.png" alt="laptop image" class="java-image">
 		</div>
 	</section>
 
